--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans"
       rel="stylesheet" />
     <link href="styles/style.css" rel="stylesheet" />
-    <title>My test page</title>
+    <title>Hello World!</title>
   </head>
   <body>
-    <h1>The winding road of becoming a front-end developer</h1>
+    <h1>My front-end development journey</h1>
     <img src="images/avenue-656969.jpg" alt="The winding road" />
-    <p>I became interested in front-end developing in 2016 when I was working at an <a href="http://wwwen.ipe.org.cn/index.html">environmental NGO in Beijing</a>.</p>
-    <p>Our organization developed an app called "Blue Map" that tracked the quality of</p>
+    <p>Mr. Bowen Tan currently manages the development of the <a href="https://iioe.org/">IIOE2.0</a> learning platform at <a href="https://ichei.org/">UNESCO-ICHEI</a>, a UNESCO category 2 center located in Shenzhen, China.</p>
+    <p>He designs the prototype of the website with Figma and oversees the following tasks for the platform development:</p>
       <ol>
-        <li>air</li>
-        <li>water</li>
-        <li>soil</li>
+        <li>user outreach and research</li>
+        <li>system design and development</li>
+        <li>UI design and front-end development</li>
+        <li>translation into the six UN official languages</li>
       </ol>
-    <p>in China and displayed pollution emitters on a map. </p>
+    <p>He was able to acquire 1029 more users to the new platform with a brand-new UI design and much smoother user experience.</p>
     <button>Change user</button>
     <script src="scripts/main.js"></script>
   </body>
